fixed image alignment

--- a/src/home.css
+++ b/src/home.css
@@ -2,7 +2,10 @@
 @plugin "daisyui";
 
 
-
+.image {
+  width: 600px;
+  height: 350px;
+}
 .topnav {
     overflow: hidden;
     background-color: #A9A9A9;
